@@ -1,3 +1,7 @@
+2014-08-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* char_routines.c: Move '#define check_range' to the top-level.
+
 2014-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* char_routines.c, ligkern_routines.c: More OFM checking.
